CDRIVER-3286 clear recovery token

CDRIVER-3287 WIP

sync all spec tests

Separate commmit: skip "snapshot" tests on sharded

See SERVER-40685

Apply Sam's changes

fix recovery token test for auth

add error code and a skipReason

fix unused

sync with transaction tests