src/libmongoc/tests/json-test-operations.c
@@ -26,6 +26,7 @@
 #include "mongoc/mongoc-topology-private.h"
 #include "mongoc/mongoc-util-private.h"
 #include "mongoc/mongoc-util-private.h"
+#include "mongoc/mongoc-uri-private.h"
 
 #include "json-test-operations.h"
 #include "json-test.h"
@@ -62,6 +63,7 @@ json_test_ctx_init (json_test_ctx_t *ctx,
    char *session_opts_path;
    int i;
    bson_error_t error;
+   bson_iter_t test_iter;
 
    ctx->client = client;
    ctx->db = db;
@@ -69,7 +71,19 @@ json_test_ctx_init (json_test_ctx_t *ctx,
    ctx->config = config;
    ctx->n_events = 0;
    bson_init (&ctx->events);
+
    ctx->test_framework_uri = test_framework_get_uri ();
+
+   if (bson_iter_init_find (&test_iter, test, "useMultipleMongoses") &&
+       bson_iter_as_bool (&test_iter)) {
+      ASSERT_OR_PRINT (mongoc_uri_upsert_host_and_port (
+                          ctx->test_framework_uri, "localhost:27017", &error),
+                       error);
+      ASSERT_OR_PRINT (mongoc_uri_upsert_host_and_port (
+                          ctx->test_framework_uri, "localhost:27018", &error),
+                       error);
+   }
+
    ctx->acknowledged = true;
    ctx->verbose = test_framework_getenv_bool ("MONGOC_TEST_MONITORING_VERBOSE");
    bson_init (&ctx->lsids[0]);
@@ -347,6 +361,8 @@ error_code_from_name (const char *name)
       return 79;
    } else if (!strcmp (name, "UnsatisfiableWriteConcern")) {
       return 100;
+   } else if (!strcmp (name, "OperationNotSupportedInTransaction")) {
+      return 263;
    }
 
    test_error ("Add errorCodeName \"%s\" to error_code_from_name()", name);
